add youtube video

--- a/landingpage/landing-page.html
+++ b/landingpage/landing-page.html
@@ -24,7 +24,7 @@
         <div class="hero-content">
             <h1>Taskify</h1>
             <p>Simple, flexible and powerful. The task manager that works the way you think.</p>
-            <a href="#" class="cta-button">Try Taskify Free</a>
+            <a href="https://www.youtube.com/watch?v=1KbV-0CiKSw" class="cta-button">Video demonstration</a>
         </div>
     </section>
 
